# PythonPytestSelenium

./: .editorconfig  .flake8  .gitignore  Pipfile  README.md  conftest.py  environment_variables.py  pyproject.toml
DTO/: __init__.py  bill_model.py
common_steps/: __init__.py  authentication_steps.py
config/: test_config.py
features/: remove_sales.feature
page_object/: login_page.py  main_page.py  page_object.py
page_object/elements/: __init__.py  buttons.py
page_object/pages/: __init__.py  bills_page.py  login_page.py  main_page.py  page_object.py
step_defs/: test_navigation_steps.py
steps/: test_authentication_steps.py
tests/: authentication_tests.py  bills_tests.py  test_authentication.py  test_authentication_steps.py  test_bills.py
