[tool.poetry]
name = "python_selenium_bdd"
version = "0.1.0"
description = "Test project using pytest-bdd and selenium"
authors = ["Vadim Mazhitov <mazhitov.vadim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.5"
pytest-bdd = "^5.0.0"
webdriver-manager = "^3.5.4"
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
assertpy = "^1.1"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
