[tool.poetry]
name = "python_selenium_bdd"
version = "0.1.0"
description = "Test project using playwright"
authors = ["Vadim Mazhitov <mazhitov.vadim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
assertpy = "^1.1"
typing-extensions = "^4.2.0"
pytest-playwright = "^0.3.0"
playwright = "^1.22.0"

[tool.poetry.dev-dependencies]
flake8 = "^4.0.1"
autopep8 = "^1.6.0"

[tool.autopep8]
max_line_length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
