[tool.poetry]
name = "python_pytest_selenium"
version = "0.1.0"
description = "Test project using pytest and selenium"
authors = ["Mazhitov Vadim <mazhitov.vadim@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
selenium = "^4.1.5"
webdriver-manager = "^3.5.4"
pytest = "^7.1.2"
python-dotenv = "^0.20.0"
assertpy = "^1.1"
typing-extensions = "^4.2.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
flake8-pytest-style = "^1.6.0"
flake8-isort = "^4.1.1"
isort = "^5.10.1"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py", "*_tests.py", "*_suite.py"]
python_classes = ["Test*", "*Test*", "*Test", "*Tests", "*Suite"]
python_functions = ["test_*"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
